tests/neg/i16655.scala
object Test:
  val x = "MyString"
  x = 5 // error // error
